Fix/MyRecipesList - set gap for cardRecipe

--- a/src/components/MyRecipesList/MyRecipesList.module.css
+++ b/src/components/MyRecipesList/MyRecipesList.module.css
@@ -1,3 +1,6 @@
 .myRecipesList {
   margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
